--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,26 +13,26 @@ services:
       - WEBHOOK_URL=http://localhost:5678/
       - DB_TYPE=postgresdb
       - DB_POSTGRESDB_HOST=postgres
-      - DB_POSTGRESDB_USER=n8n
-      - DB_POSTGRESDB_PASSWORD=your_password
+      - DB_POSTGRESDB_USER=${POSTGRES_USER}
+      - DB_POSTGRESDB_PASSWORD=${POSTGRES_PASSWORD}
     volumes:
       - n8n_data:/home/node/.n8n
     depends_on:
       - postgres
 
-  # 2. The Database (Stores n8n data AND your Project Data)
+  # 2. The Database
   postgres:
     image: postgres:16
     ports:
       - "5432:5432"
     environment:
-      - POSTGRES_USER=n8n
-      - POSTGRES_PASSWORD=your_password
-      - POSTGRES_DB=n8n
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
-  # 3. The Scraper (Headless Chrome)
+  # 3. The Scraper
   browserless:
     image: browserless/chrome:latest
     ports:
